Added the dotted line break. Took over an hour because I was experimenting with the <hr> tag using opacity and box-shadow. Then I started experimenting with creating my own line break using a period and styling it with opacity and box-shadow. Finally settled with cropping the entire image from Photoshop and saving it as a png so that it can have a transparent background.

--- a/style.css
+++ b/style.css
@@ -145,6 +145,9 @@ p.contactText:after {
 p.contactText:after {
 	right: 11px;
 }
+img.dottedLine {
+	background-repeat: repeat-x;
+}
 .talkSection, .conversationSection {
 	color: #dee7e5;
 }
